--- a/index.html
+++ b/index.html
@@ -2,8 +2,49 @@
 <html>
     <head>
         <title>Contact Us</title>
+        <link rel="stylesheet" type="text/css" href="../Week-17-Homework/CSS/Styles.css"/>
     </head>
     <body>
-
+        <header class="nav">
+            <div class="inline-block logo"> 
+                <img src="../Week-17-Homework/images/logo.png">
+            </div>
+            <div class="inline-block">
+                <ul>
+                    <ul class="navmenu">MENU</ul>
+                    <ul class="navmenu">CATERING</ul>
+                    <ul class="navmenu">MUSIC/EVENTS</ul>
+                    <ul class="navmenu">CONTACT US</ul>
+                </ul>
+            </div>
+        </header>
+        <section class="CTA">
+            <h1>Let's Talk!</h1>
+        </section>
+        <section class="form">
+            <div class="leftside">
+                <label for="fname"></label>
+                <input type="text" id="fname" name="fname" placeholder="First Name">
+                <label for="lname"></label>
+                <input type="text" id="lname" name="lname" placeholder="Last Name"><br>
+                <label for="email"></label>
+                <input type="email" id="email" name="email" placeholder="Email">
+                <label for="phone#"></label>
+                <input type="text" id="phone#" name="phone#" placeholder="Phone Number (Optional)"><br>
+            </div>
+            <textarea id="input" name="What's up">What's up?</textarea><br>
+            <button class="submit">Submit</button>
+        </section>
+        <section class="container">
+            <center><img src="../Week-17-Homework/images/FOOTER.png" alt="Footer Logo"></center>
+        </section>
+        <footer>
+            <img src="../Week-17-Homework/images/logo.png">
+            <center><p2>2218 College Avenue</p2></center><br>
+            <center><p3>Austin, TX 78704</p3></center>
+            <div class="align-right">
+                <button class="Contact">Contact</button>
+            </div>
+        </footer>
     </body>
 </html>
