--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <label for="email"></label>
                 <input type="email" id="email" name="email" placeholder="Email">
                 <label for="phone#"></label>
-                <input type="text" id="phone#" name="phone#" placeholder="Phone Number (Optional)"><br>
+                <input type="text" id="phonen" name="phonen" placeholder="Phone Number"><br>
             </div>
             <textarea id="input" name="What's up">What's up?</textarea><br>
             <button class="submit">Submit</button>
